--- a/client/src/app/components/skill-description-popup/skill-description-popup.component.html
+++ b/client/src/app/components/skill-description-popup/skill-description-popup.component.html
@@ -5,7 +5,7 @@
     <div *ngFor="let item of skillLevelDescription | keyvalue" class="key">
       <simple-tag class="simpletag" type="gray" ellipseTag="true" [value]="item.key">
       </simple-tag>
-      <li *ngFor="let desc of item.value"> <b class="bold">{{desc.title}}</b> {{desc.value}}
+      <li> <b class="bold">{{item.value.title}}</b> {{item.value.description}}
         <hr>
       </li>
     </div>
