Removed unnecessary code

--- a/client/src/app/pages/company/create-company/create-company.component.scss
+++ b/client/src/app/pages/company/create-company/create-company.component.scss
@@ -73,17 +73,6 @@ $profile-form-field-mt: 30px;
   }
 }
 
-h1 {
-  margin: 0 0 30px 0;
-  font-size: 50px;
-  line-height: 1.5;
-}
-
-h2 {
-  margin: 0;
-  font-size: 30px;
-  line-height: 1.5;
-}
 h3 {
   margin: 0;
   font-size: 20px;
@@ -93,75 +82,6 @@ p {
   margin: 0;
   font-size: 14px;
   line-height: 1.5;
-}
-
-.option-text {
-  position: absolute;
-  width: 100%;
-  top: 265px;
-  h1 {
-    color: rgba($primary-font-color, .84);
-  }
-}
-
-.option-box {
-  position: relative;
-  width: 85%;
-  max-width: 500px;
-  &:before{
-    content: "";
-    display: block;
-    padding-top: 80%;
-  }
-  &__content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    box-sizing: border-box;
-    border-radius: 20px;
-    background-image: url('/assets/icons/option-box.svg');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: contain;
-  }
-  &__title,
-  &__description {
-    width: 100%;
-    .icon-cv {
-      width: 30%;
-    }
-    h2 {
-      font-weight: bold;
-      color: rgba($primary-font-color, .34);
-    }
-    h3 {
-      color: rgba($primary-font-color, .34);
-    }
-    p {
-      color: rgba($primary-font-color, .44);
-    }
-  }
-}
-
-.option-title {
-  margin-top: 30px;
-  h2 {
-    color: rgba($primary-font-color, .84);
-  }
-  p {
-    font-size: 16px;
-    color: rgba($primary-font-color, .84);
-  }
-}
-
-.option-description {
-  margin-top: 30px;
-  p {
-    font-size: 16px;
-    color: rgba($primary-font-color, .54);
-  }
 }
 
 .container {
@@ -177,42 +97,8 @@ p {
     grid-column-start: 7;
     grid-column-end: 13;
   }
-  &.choose-option {
-    margin-top: $container-mt-desktop;
-    position: relative;
-    text-align: center;
-    .container__full {
-      h1 {
-        color: rgba($primary-font-color, .84);
-      }
-    }
-    .container__left {
-      @include flex(column, center, flex-start);
-      .option-box {
-        &__content {
-          @include flex(column, center, space-evenly);
-        }
-      }
-    }
-    .container__right {
-      @include flex(column, center, flex-start);
-      .option-box {
-        &__content {
-          background-image: url('/assets/icons/option-box-transparent.svg');
-          @include flex(row, center, center);
-        }
-      }
-    }
-  }
   &.profile-basic,
-  &.profile-about,
-  &.profile-education,
-  &.profile-work,
-  &.profile-skills,
-  &.profile-project,
-  &.profile-publication,
-  &.profile-links,
-  &.profile-status {
+  &.profile-skills {
     position: relative;
     margin-top: $container-mt-desktop;
     action-button.btn-next {
@@ -260,19 +146,6 @@ p {
           &.textarea {
             padding: 10px 20px 5px 20px;
           }
-          &.border {
-            margin-top: 60px;
-            padding: 0;
-          }
-          &.btn {
-            margin-top: 60px;
-            border: none;
-            padding: 0;
-            @include flex(row, center, flex-start);
-            action-button {
-              min-width: 150px;
-            }
-          }
           &.search {
             border: none;
             padding: 0;
@@ -307,16 +180,6 @@ p {
                 margin-right: 15px;
               }
             }
-          }
-          &.simple-tag {
-            border: none;
-            @include flex(column, center, center);
-            simple-tag {
-              margin: 10px 0;
-            }
-          }
-          action-button {
-            min-width: 150px;
           }
           mat-form-field {
             width: 100%;
@@ -999,34 +862,10 @@ p {
       }
     }
   }
-  .option-text {
-    position: relative;
-    grid-column-start: 2;
-    grid-column-end: 12;
-    top: 0;
-    h1 {
-      margin: 30px 0;
-    }
-  }
   .container {
     padding: $container-padding-tablet;
-    &.choose-option {
-      margin-top: $container-mt-tablet;
-      .container__left,
-      .container__right {
-        grid-column-start: 2;
-        grid-column-end: 12;
-      }
-    }
     &.profile-basic,
-    &.profile-about,
-    &.profile-education,
-    &.profile-work,
-    &.profile-skills,
-    &.profile-project,
-    &.profile-publication,
-    &.profile-links,
-    &.profile-status {
+    &.profile-skills {
       margin-top: $container-mt-tablet;
       action-button.btn-next {
         position: unset;
@@ -1045,12 +884,6 @@ p {
           }
           &__field {
             width: 90%;
-            &.border {
-              margin-top: 40px;
-            }
-            &.btn {
-              margin-top: 40px;
-            }
             mat-form-field {
               img {
                 width: 24px;
@@ -1164,14 +997,6 @@ p {
 }
 
 @media only screen and (max-width: $mobile-breakpoint) {
-  h1 {
-    font-size: 35px;
-    line-height: 1.2;
-  }
-  h2 {
-    font-size: 22px;
-    line-height: 1.2;
-  }
   h3 {
     font-size: 15px;
     line-height: 1.2;
@@ -1179,40 +1004,10 @@ p {
   p {
     font-size: 12px;
   }
-  .option-text {
-    grid-column-start: 1;
-    grid-column-end: 13;
-    h1 {
-      margin: 20px 0;
-    }
-  }
-  .option-box {
-    width: 95%;
-    max-width: 400px;
-    &:before{
-      padding-top: 85%;
-    }
-  }
   .container {
     padding: $container-padding-mobile;
-    &.choose-option {
-      margin-top: $container-mt-mobile;
-      .container__full,
-      .container__left,
-      .container__right {
-        grid-column-start: 1;
-        grid-column-end: 13;
-      }
-    }
     &.profile-basic,
-    &.profile-about,
-    &.profile-education,
-    &.profile-work,
-    &.profile-skills,
-    &.profile-project,
-    &.profile-publication,
-    &.profile-links,
-    &.profile-status {
+    &.profile-skills {
       margin-top: $container-mt-mobile;
       action-button.btn-next {
         margin-top: 20px;
@@ -1229,12 +1024,6 @@ p {
           }
           &__field {
             width: 95%;
-            &.border {
-              margin-top: 30px;
-            }
-            &.btn {
-              margin-top: 30px;
-            }
             mat-form-field {
               img {
                 width: 20px;
