Add default company logo icon

--- a/client/src/app/pages/company/create-company/create-company.component.html
+++ b/client/src/app/pages/company/create-company/create-company.component.html
@@ -289,7 +289,7 @@
 	<div class="header-section">
 		<div class="company-row">
 			<div>
-				<img class="company-logo" src="{{company_logo_url || 'assets/icons/no_photo.png'}}" alt="Company logo">
+				<img class="company-logo" src="{{company_logo_url || 'assets/icons/ic_default_company_logo.svg'}}" alt="Company logo">
 			</div>
 
 			<div class="company-detail">
