--- a/client/src/app/pages/company/create-company/create-company.component.scss
+++ b/client/src/app/pages/company/create-company/create-company.component.scss
@@ -344,7 +344,7 @@ p {
         box-sizing: border-box;
         display: inline-flex;
         flex-wrap: wrap;
-        padding: 20px 40px;
+        padding: 40px;
         border-bottom: 1px solid map-get($md-cfaccent, 50);
         .company-logo {
           width: 125px;
@@ -371,11 +371,11 @@ p {
           }
         }
         .company-status {
-          min-width: 260px;
           display: flex;
           flex-direction: column;
           justify-content: space-between;
           align-items: flex-end;
+          margin-left: 20px;
         }
       }
     }
@@ -702,100 +702,25 @@ p {
       }
     }
     &.company-preview {
-      grid-template:
-      " hero hero " auto 
-      " lege lege " 0
-      " left main-nav " auto
-      " left main " auto
-      / 0 auto
-      ;
-      grid-column-gap: 0;
-      padding-top: 60px;
-
-      legend {
-        position: fixed;
-        margin: 0;
-        height: 60px;
-        top: 70px;
-        left: 0;
-        width: 100%;
-        background-color: $bg-color-1;
-        border-bottom: 1px solid map-get($md-cfaccent, 50);
-        padding:0 40px;
-        box-sizing: border-box;
-        @include flex(row, center, space-between);
-        z-index: 100;
-        .nav-title {
-          cursor: pointer;
-          h3 {
-            color: map-get($md-cfprimary, 500);
-          }
-          mat-icon {
-            display: block;
-          }
-        }
-      }
-
       .header-section {
         .company-row {
-          padding: 20px 20px;
-          flex-direction: column;
-          align-items: center;
-          .company-logo {
-            width: 110px;
-            height: 110px;
-            margin-right: 0;
-            border-radius: 50%;
-            object-fit: cover;
-          }
-          .company-detail {
-            margin: 20px 0;
-            h1, h4 {
-              text-align: center;
-            }
-          }
-          .company-status {
-            flex-direction: row;
-            justify-content: center;
-            & > * {
-              margin: 5px;
-            }
-          }
+          padding: 25px;
         }
       }
-
       .nav-section {
-        position: fixed;
-        padding: 10px 40px 30px 40px;
-        left: 0;
-        width: 100%;
-        background-color: rgba(0, 0, 0, .32);
-        top: 130px;
-        height: calc(100vh - 130px);
-        .nav-title {
-          display: none;
-        }
-        &.nav-hidden {
-          display: none;
-        }
+        padding: 0 0 50px 25px;
       }
- 
       .main-section {
-        margin: 0 40px;
-        padding-top: 40px;
-        padding-bottom: 40px;
-        .edit-title {
-          display: none;
-        }
+        margin: 0 25px 0 0;
       }
     }
   }
   .img-tag {
-    width: 330px;
-  } 
+    width: 320px;
+  }
 }
 
-@media only screen and (max-width: $mobile-breakpoint) {
+@media only screen and (max-width: $max-mobile-breakpoint) {
   h3 {
     font-size: 15px;
     line-height: 1.2;
@@ -816,7 +741,7 @@ p {
           width: 100%;
           max-width: $profile-form-max-width-mobile;
           padding: $profile-form-padding-mobile;
-          margin-bottom: 35px;
+          margin-bottom: 25px;
           &__image {
             width: 95px;
             height: 95px;
@@ -834,8 +759,38 @@ p {
       }
     }
     &.company-preview {
+      grid-template:
+      " hero hero " auto 
+      " lege lege " 0
+      " left main-nav " auto
+      " left main " auto
+      / 0 auto
+      ;
+      grid-column-gap: 0;
+      padding-top: 60px;
+
       legend {
-        padding: 0 20px;
+        position: fixed;
+        margin: 0;
+        height: 60px;
+        top: 70px;
+        left: 0;
+        width: 100%;
+        background-color: $bg-color-1;
+        border-bottom: 1px solid map-get($md-cfaccent, 50);
+        padding:0 20px;
+        box-sizing: border-box;
+        @include flex(row, center, space-between);
+        z-index: 100;
+        .nav-title {
+          cursor: pointer;
+          h3 {
+            color: map-get($md-cfprimary, 500);
+          }
+          mat-icon {
+            display: block;
+          }
+        }
       }
 
       .header-section {
@@ -846,14 +801,34 @@ p {
           }
         }
         .company-row {
+          padding: 20px 20px;
+          flex-direction: column;
+          align-items: center;
+          .company-logo {
+            width: 110px;
+            height: 110px;
+            margin-right: 0;
+            border-radius: 50%;
+            object-fit: cover;
+          }
           .company-detail {
+            margin: 20px 0;
+            h1, h4 {
+              text-align: center;
+            }
             .company-info {
               flex-direction: column;
+              display: flex;
+              align-items: center;
             }
           }
           .company-status {
             flex-direction: column;
             align-items: center;
+            margin-left: 0;
+            & > * {
+              margin: 5px;
+            }
             img {
               margin-top: 15px;
             }
@@ -863,16 +838,57 @@ p {
           padding-right: 0;
         }
       }
+
       .nav-section {
+        position: fixed;
         padding: 10px 20px 30px 20px;
+        left: 0;
+        width: 100%;
+        background-color: rgba(0, 0, 0, .32);
+        top: 130px;
+        height: calc(100vh - 130px);
+        .nav-title {
+          display: none;
+        }
+        &.nav-hidden {
+          display: none;
+        }
       }
+ 
       .main-section {
         margin: 0 20px;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        .edit-title {
+          display: none;
+        }
       }
     }
   }
   .img-tag {
-    width: 230px;
+    width: 290px;
+  }
+}
+
+@media only screen and (max-width: 479px) {
+  .container {
+    padding: 0 15px;
+    &.profile-basic,
+    &.profile-skills {
+      margin-top: 25px;
+      action-button.btn-next {
+        margin-top: 15px;
+      }
+      .container__full {
+        .profile-form {
+          padding: 25px 15px;
+          margin-bottom: 15px;
+        }
+      }
+    }
+  }
+  .img-tag {
+    width: 100%;
     margin-right: 0;
   }
 }
