--- a/client/src/styles/cf-theme.scss
+++ b/client/src/styles/cf-theme.scss
@@ -501,7 +501,7 @@ action-button {
   grid-gap: 15px;
   padding: 0 60px;
   width: 100%;
-  max-width: $container-max-width;
+  // max-width: $container-max-width;
   box-sizing: border-box;
 }
 
