Fix founding year issue

--- a/client/src/app/pages/company/create-company/create-company.component.html
+++ b/client/src/app/pages/company/create-company/create-company.component.html
@@ -304,7 +304,7 @@
 					</small>
 					<small *ngIf="founding_year">
 						<img src="assets/icons/ic_founding.svg">
-						{{'Since ' + helperService.convertStringToFormattedDateString(founding_year, 'L', 'YYYY')}}
+						{{'Since ' + founding_year}}
 					</small>
 				</div>
 				<div class="company-info">
