Fix country issue

--- a/client/src/app/pages/company/create-company/create-company.component.html
+++ b/client/src/app/pages/company/create-company/create-company.component.html
@@ -118,7 +118,7 @@
 					<mat-label>Country</mat-label>
 					<mat-select formControlName="hq_country">
 					<mat-option value="{{null}}">{{null}}</mat-option>
-					<mat-option *ngFor="let country of countries" value="{{country}}">{{country}}</mat-option>
+					<mat-option *ngFor="let country of countries_sort" value="{{country}}">{{country}}</mat-option>
 					</mat-select>
 				</mat-form-field>
 			</div>
